# LeandraAtosInterface

./: .gitignore  Readme.md  run_atos_interface.sh
src/atos_iso_object/iso_object/: demoIsoObject.cpp
src/atos_iso_object/iso_object/inc/: iso22133object.hpp
src/atos_iso_object/iso_object/src/: iso22133object.cpp  iso22133state.cpp
src/leandra_atos_interface/: CMakeLists.txt  package.xml
src/leandra_atos_interface/include/leandra_atos_interface/: leandra_atos_interface.hpp  leandra_atos_interface_node.hpp
src/leandra_atos_interface/launch/: leandra_atos_interface.launch.py
src/leandra_atos_interface/src/: leandra_atos_interface.cpp  leandra_atos_interface_node.cpp
